--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
+    "knex": "node --no-warnings --loader tsx ./node_modules/knex/bin/cli.js",
     "migrate:latest": "npm run knex migrate:latest",
     "migrate:rollback": "npm run knex migrate:rollback",
     "migrate:rollback:all": "npm run knex migrate:rollback --all",
