--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   },
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "knex": "node --no-warnings --import tsx ./node_modules/knex/bin/cli.js",
+    "knex": "node --no-warnings --loader tsx ./node_modules/.bin/knex",
     "migrate:latest": "npm run knex migrate:latest",
     "migrate:rollback": "npm run knex migrate:rollback",
     "migrate:rollback:all": "npm run knex migrate:rollback --all",
     "lint": "eslint src --ext .ts",
     "lint:fix": "eslint src --ext .ts --fix",
     "test": "vitest",
-    "build": "tsup src --out-dir build"
+    "build": "tsup src --out-dir build",
+    "knex:build": "node --no-warnings --import tsx ./node_modules/bin/knex",
+    "migrate:latest:build": "npm run knex:build migrate:latest"
   },
   "keywords": [],
   "author": "",
